inline elements menu re design and fix when out of screen

--- a/assets/less/components/page-builder/elements-menu.less
+++ b/assets/less/components/page-builder/elements-menu.less
@@ -1,16 +1,16 @@
 .elements-menu {
-  width: 190px;
-  height: 240px;
+  width: 280px;
+  height: 400px;
   text-align: left;
   text-decoration: none;
   z-index: 4;
   position: fixed;
 
   .ballon {
-    width: 190px;
-    height: 240px;
-    border: 1px solid #d7d7d7;
-    .alphaColorToRgb(#e1e1e1, 90);
+    width: 100%;
+    height: 100%;
+    border: 1px solid @pageBuilderChromeBorders;
+    background-color: #2b2d31;
     .roundedCorners(3px);
     overflow: hidden;
     position: relative;
@@ -18,20 +18,29 @@
 
   .arrow-left {
     position: absolute;
-    top: 18px;
-    left: -8px;
+    top: 96px;
+    left: -11px;
     width: 0;
     height: 0;
-    border-top: 6px solid transparent;
-    border-bottom: 6px solid transparent;
-    border-right: 8px solid #d7d7d7;
+    border-top: 9px solid transparent;
+    border-bottom: 9px solid transparent;
+    border-right: 11px solid #2b2d31;
+  }
+
+  &.angled {
+    .arrow-left {
+      border-top: 11px solid transparent;
+      border-bottom: 11px solid transparent;
+      border-right: 17px solid @pageBuilderChrome;
+      transform: translate(5px, 10px) rotate(45deg);
+    }
   }
 
   &.left {
     .arrow-left {
       left: auto;
       right: -8px;
-      border-left: 8px solid #d7d7d7;
+      border-left: 8px solid @pageBuilderChromeBorders;
       border-right: 0;
     }
   }
@@ -45,44 +54,51 @@
   }
 
   .category {
-    margin-bottom: 10px;
-
+    margin-top: -1px;
     &.collapsed {
-      margin-bottom: 0;
-      border-bottom: 1px solid #ccc;
+      .category-info i {
+        transform: rotate(-90deg);
+      }
     }
   }
 
   .category-info {
-    background-color: #d7d7d7;
-    color: #404040;
-    padding: 0 5px;
+    background-color: @pageBuilderChrome;
+    color: #efefef;
+    padding-right: 5px;
     font-size: 10px;
     text-transform: uppercase;
     cursor: pointer;
-    line-height: 25px;
+    line-height: 30px;
+    border-top: 1px solid @pageBuilderChromeBorders;
+    border-bottom: 1px solid @pageBuilderChromeBorders;
 
+    i, span {
+      vertical-align: top;
+      display: inline-block;
+    }
     i {
-      color: #404040;
-      float: right;
-      line-height: 25px;
-      font-size: 13px;
-      width: 40px;
+      color: #efefef;
+      line-height: 30px;
+      font-size: 18px;
+      width: 30px;
       text-align: center;
+      .transition();
     }
 
     &:hover {
-      background-color: #C5C5C5;
+      background-color: #3f4249;
     }
   }
 
   .element-entry {
-    height: 35px;
+    height: 30px;
     cursor: pointer;
+    padding-left: 25px;
 
     i, span {
-      color: #5a5a5a;
-      line-height: 35px;
+      color: #efefef;
+      line-height: 30px;
       display: inline-block;
       vertical-align: top;
     }
@@ -99,10 +115,7 @@
     }
 
     &:hover, &.active {
-      background-color: @adminPrimary;
-      i, span {
-        color: #ffffff;
-      }
+      background-color: #3f4249;
     }
   }
 }
